# GroupD_project1

./: .gitignore  HTML_script.py  HTML_template.HTML  README.md  contigs.fasta.fxi  json.py  main.py  parsing_FASTQ.py  parsing_files.py  parsing_files2.py  pyproject.toml  results.tsv  run.py  stuff.py
.github/workflows/: python-package.yml
Results/: Results.html  contigs_records.tsv  run.json  sampleA.tsv  sampleB.tsv
Results/Results_html/: contigs.html  sampleA.html  sampleB.html
inputFiles/: sampleB.fastq  samples.tsv
public/: Results.html
scripts/: HTML_script.py  main.py  parsing_files.py  parsing_files2.py  run.py  test_parsing_files.py
src/groupD_tool/: HTML_script.py  __init__.py  main.py  parsing_files.py  run.py  run_json.py
src/groupD_tool/template/: HTML_template.HTML
src/yourtool/: HTML_script.py  __init__.py  main.py  parsing_files.py  run.py
template/: HTML_template.HTML
tests/: contigs.fasta  contigs.fasta.fxi  sampleA.fastq  sampleA.fastq.fxi  sampleB.fastq.fxi  test_parsing_files.py
tests/force_error_tests/: wrong_contigs.fasta  wrong_contigs.fasta.fxi
