[project]
name = "biol5472_tool_groupD"
version = "0.1.0"
requires-python = ">3.9"
dependencies = ["typer>=0.12","pandas>=2.2", "pyfastx >= 2.3.0", "jinja2 >= 3.1.6"]

[build-system]
requires=["uv_build"]
build-backend = "uv_build"

[project.scripts]
biol5472_tool_groupD="biol5472_tool_groupD.cli:" #need to add CLI function to the run.py?


[tool.mypy]
disallow_untyped_defs = true

## need to have typing, pytest, and pyfastx dependencies here?

[tool.pytest.ini_options]
testpaths=["tests"]
addopts=["-q"]