[project]
name = "groupD_tool"
version = "0.1.0"
requires-python = ">3.9"
dependencies = ["typer>=0.12", "pyfastx >= 2.3.0", "jinja2 >= 3.1.6"]
readme = 'README.md'
license = 'Apache-2.0' 


[build-system]
requires=["uv_build"]
build-backend = "uv_build"

[project.scripts]
groupD_tool="groupD_tool.run:cli"


[tool.mypy]
disallow_untyped_defs = true

## need to have typing, pytest, and pyfastx dependencies here?

[tool.pytest.ini_options]
testpaths=["tests"]
addopts=["-q"]

